docs: add detailed architecture documentation and refactor services for better abstraction